<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--长按某一个消息item时的选项-->
     <item
        android:id="@+id/select"
        android:title="@string/select_action"/>
    <item android:id="@+id/deselect"
          android:title="@string/deselect_action"/><!--取消选择-->
    <item
         android:id="@+id/reply_all"
         android:title="@string/reply_all_action"/><!--回复全部-->
     <item
         android:id="@+id/reply"
         android:title="@string/reply_action"/>
     <item
         android:id="@+id/send_again"
         android:title="@string/send_again_action"/>
     <item
         android:id="@+id/forward"
         android:title="@string/forward_action"/>
     <item
         android:id="@+id/forward_as_attachment"
         android:title="@string/forward_as_attachment_action"/>
    <item
        android:id="@+id/delete"
        android:title="@string/delete_action"
    />
    <item
        android:id="@+id/mark_as_read"
        android:title="@string/mark_as_read_action"
    />
    <item
        android:id="@+id/mark_as_unread"
        android:title="@string/mark_as_unread_action"
    />
    <item
        android:id="@+id/archive"
        android:title="@string/archive_action"
    />
    <item
        android:id="@+id/move"
        android:title="@string/move_action"
    />
    <item
        android:id="@+id/copy"
        android:title="@string/copy_action"
    />
    <item
        android:id="@+id/flag"
        android:title="@string/flag_action"
    />
    <item
        android:id="@+id/unflag"
        android:title="@string/unflag_action"
    />
    <item
        android:id="@+id/spam"
        android:title="@string/spam_action"
    />
    <item
        android:id="@+id/same_sender"
        android:title="@string/from_same_sender" /><!--来自这个发件人的更多邮件-->
    <item
        android:id="@+id/debug_delete_locally"
        android:title="@string/debug_delete_local_body"
        /><!--调试/删除消息正文-->
</menu>
