<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--
    The comments preceding the (top level) menu items denote which part of the combined message
    list/view activity the item belongs to. Either "MessageList", "MessageView", or "always" (as in:
    always show this item, no matter what display mode we're in).

    The comments are for informational purposes only. Please make sure to adjust the code in
    MessageList.configureMenu() if you make any changes to this file.
    (顶级)菜单项之前的注释表示组合消息的哪一部分
    列表/查看项目所属的活动。“MessageList”、“MessageView”或“always”(如:
    总是显示这个项目，不管我们在什么显示模式)。
    这些评论仅供参考。请务必调整代码进来
    如果您对这个文件做了任何更改，可以使用MessageList.configureMenu()。
    -->

    <!-- MessageList -->
    <!--搜索-->
    <item
        android:id="@+id/search"
        android:icon="?attr/iconActionSearch"
        app:showAsAction="always"
        android:title="@string/search_action"/>

    <!-- MessageList -->
    <!--在服务器上搜索-->
    <item
        android:id="@+id/search_remote"
        android:icon="?attr/iconActionRemoteSearch"
        app:showAsAction="always"
        android:title="@string/action_remote_search"
        android:visible="false"/>

    <!-- MessageView -->
    <!--归档-->
    <item
        android:id="@+id/archive"
        android:icon="?attr/iconActionArchive"
        app:showAsAction="always"
        android:title="@string/archive_action"/>

    <!-- MessageView -->
    <item
        android:id="@+id/delete"
        android:alphabeticShortcut="q"
        android:icon="?attr/iconActionDelete"
        app:showAsAction="always"
        android:title="@string/delete_action"/>

    <!-- MessageView -->
    <!--标记为未读-->
    <item
        android:id="@+id/toggle_unread"
        android:icon="?attr/iconActionMarkAsUnread"
        android:alphabeticShortcut="u"
        app:showAsAction="always"
        android:title="@string/mark_as_unread_action"/>

    <!-- MessageView -->
    <item
        android:id="@+id/previous_message"
        android:title="@string/previous_action"
        android:icon="?attr/iconActionPreviousMessage"
        app:showAsAction="always" />

    <!-- MessageView -->
    <item
        android:id="@+id/next_message"
        android:title="@string/next_action"
        android:icon="?attr/iconActionNextMessage"
        app:showAsAction="always"
        />

    <!-- MessageView -->
    <!--标记为垃圾邮件-->
    <item
        android:id="@+id/spam"
        android:icon="?attr/iconActionSpam"
        app:showAsAction="ifRoom"
        android:title="@string/spam_action"/>

    <!-- MessageView -->
    <item
        android:id="@+id/move"
        android:icon="?attr/iconActionMove"
        app:showAsAction="ifRoom"
        android:title="@string/move_action"/>

    <!-- MessageView -->
    <item
        android:id="@+id/copy"
        android:icon="?attr/iconActionCopy"
        app:showAsAction="ifRoom"
        android:title="@string/copy_action"/>

    <!-- MessageView -->
    <!--…右上角三个点菜单  中的发送部分 -->
<!--
    <item
        android:id="@+id/single_message_options"
        android:icon="?attr/iconActionSingleMessageOptions"
        app:showAsAction="ifRoom"
        android:title="@string/single_message_options_action">
        <menu>
            <item
                android:id="@+id/reply"
                android:title="@string/reply_action"/>
            <item
                android:id="@+id/reply_all"
                android:title="@string/reply_all_action"/>
            <item
                android:id="@+id/forward"
                android:title="@string/forward_action"/>&lt;!&ndash;转发&ndash;&gt;
            <item
                android:id="@+id/forward_as_attachment"
                android:title="@string/forward_as_attachment_action"/>
            <item
                android:id="@+id/share"
                android:title="@string/send_alternate_action"/>
        </menu>
    </item>
-->

    <!--回复-->
    <item
        android:id="@+id/reply"
        android:title="@string/reply_action"/>
    <!--转发-->
    <item
        android:id="@+id/forward"
        android:title="@string/forward_action"/>

    <!-- MessageView -->
    <!--重新归档…-->
    <item
        android:id="@+id/refile"
        android:icon="?attr/iconActionSingleMessageOptions"
        app:showAsAction="never"
        android:title="@string/refile_action">
        <menu>
            <item
                android:id="@+id/refile_archive"
                android:title="@string/archive_action"/>

            <!-- MessageView -->
            <item
                android:id="@+id/refile_spam"
                android:title="@string/spam_action"/>

            <!-- MessageView -->
            <item
                android:id="@+id/refile_move"
                android:title="@string/move_action"/>

            <!-- MessageView -->
            <item
                android:id="@+id/refile_copy"
                android:title="@string/copy_action"/>
        </menu>
    </item>

    <!--显示邮件头-->
    <item android:id="@+id/show_headers"
          app:showAsAction="never"
          android:title="@string/show_headers_action"/>

    <item android:id="@+id/hide_headers"
          app:showAsAction="never"
          android:title="@string/hide_headers_action"/>

    <!-- always -->
    <!--写 新邮件-->
    <item
        android:id="@+id/compose"
        android:alphabeticShortcut="c"
        android:icon="?attr/iconActionCompose"
        app:showAsAction="ifRoom"
        android:title="@string/compose_action"/>

    <!-- MessageList -->
    <!--排序方式-->
    <item
        android:id="@+id/set_sort"
        android:icon="?attr/iconActionSort"
        app:showAsAction="ifRoom"
        android:title="@string/sort_by">
        <menu>
            <item
                android:id="@+id/set_sort_date"
                android:title="@string/sort_by_date"/>
            <item
                android:id="@+id/set_sort_arrival"
                android:title="@string/sort_by_arrival"/>
            <item
                android:id="@+id/set_sort_subject"
                android:title="@string/sort_by_subject"/>
            <item
                android:id="@+id/set_sort_sender"
                android:title="@string/sort_by_sender"/>
            <item
                android:id="@+id/set_sort_flag"
                android:title="@string/sort_by_flag"/>
            <item
                android:id="@+id/set_sort_unread"
                android:title="@string/sort_by_unread"/>
            <item
                android:id="@+id/set_sort_attach"
                android:title="@string/sort_by_attach"/>
        </menu>
    </item>

    <!-- MessageList -->
    <item
        android:id="@+id/select_all"
        android:icon="?attr/iconActionSelectAll"
        app:showAsAction="never"
        android:title="@string/batch_select_all"/>

    <!-- MessageList -->
    <item
        android:id="@+id/mark_all_as_read"
        app:showAsAction="never"
        android:title="@string/mark_all_as_read"/>

    <!-- MessageList -->
    <!--发送邮件-->
    <item
        android:id="@+id/send_messages"
        android:alphabeticShortcut="r"
        android:icon="?attr/iconActionUpload"
        app:showAsAction="never"
        android:title="@string/send_messages_action"/>

    <!-- MessageList -->
    <!--清空垃圾箱-->
    <item
        android:id="@+id/empty_trash"
        android:alphabeticShortcut="e"
        android:title="@string/empty_trash_action"
        app:showAsAction="never" />

    <!-- MessageList -->
    <!--擦除-->
    <item
        android:id="@+id/expunge"
        app:showAsAction="never"
        android:title="@string/expunge_action"/>

    <!-- MessageView -->
    <!--切换到深色主题-->
    <item
        android:id="@+id/toggle_message_view_theme"
        app:showAsAction="never"
        android:title="@string/message_view_theme_action_dark"/>

</menu>
